--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -2,10 +2,10 @@
 # Release snapshot on CRON schedule (every night) or on demand.
 name: Release snapshot
 
-on:
-  workflow_dispatch: {}
-  schedule:
-    - cron: "0 0 * * *"
+#on:
+#  workflow_dispatch: {}
+#  schedule:
+#    - cron: "0 0 * * *"
 
 env:
   GO_VERSION: "1.19.1"
